--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -18,20 +18,22 @@
 }
 
 .contetn__stands_one > div > p {
-  width: 550px;
+  max-width: 550px;
   margin-top: 20px;
 }
 
 .img__swap_stand {
   display: block;
-  width: 455px;
-  height: 521px;
-  transform: scale(0.6);
-  background-image: url(../imges/stand0.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  transform-style: preserve-3d;
+  max-width: 455px;
+  width: 100%;
+  max-width: 521px;
+  height: auto;
+  transform: scale(0.5);
   position: relative;
+}
+
+.img_0 {
+  max-width: none;
 }
 
 .img_1 {
@@ -358,10 +360,11 @@
 }
 
 .open__card_ {
-  width: 900px;
+  margin: auto;
+  max-width: 900px;
+  width: -webkit-fill-available;
   min-height: 450px;
   height: 100%;
-  margin-left: 50px;
   border-radius: 20px;
   padding-bottom: 10px;
 }
@@ -369,14 +372,14 @@
 .text__open_st {
   display: flex;
   justify-content: space-between;
-  width: 420px;
   margin: 20px;
   padding-top: 20px;
   margin-left: 50%;
 }
 
 .text__st {
-  width: 800px;
+  max-width: 800px;
+  width: 100%;
   margin: 30px;
 }
 
@@ -385,6 +388,7 @@
   font-size: 18px;
   font-weight: 300;
   margin-top: 30px;
+  padding-right: 60px;
 }
 
 .text__open_st > button {
@@ -420,7 +424,8 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  width: 200px;
+ max-width: 200px;
+ width: 100%;
   height: 40px;
   border-radius: 15px;
   font-size: 16px;
@@ -433,8 +438,8 @@
 
 .slider {
   margin: 0 auto;
-  width: 800px;
-  max-width: 100%;
+  max-width: 800px;
+  width: 100%;
   text-align: center;
   margin-top: -60px;
 }
@@ -449,14 +454,18 @@
 }
 
 .slides {
-  width: 390px;
+  max-width: 390px;
   border-radius: 10px;
   position: relative;
   z-index: 1;
 }
 
 .overflow {
+  min-width: 170px;
+  max-width: 360px;
   width: 100%;
+  max-height: 210px;
+  height: auto;
   overflow: hidden;
 }
 
@@ -466,11 +475,68 @@
 
 .slide-content > img {
   vertical-align: top;
-  width: 360px;
-  height: 210px;
   border-radius: 15px;
 }
 
 .noneCard {
   display: none;
+}
+
+
+@media (max-width: 768px) {
+  h1, h2, h3, h4, h5, h6 {
+      font-size: 32px;
+  }
+  p {
+      font-size: 18px;
+  }
+  .text__open_st {
+    max-width: 800px;
+    width: 100%;
+    justify-content: flex-start;
+  }
+  #buttonClean1 {
+    margin-left: auto;
+    margin-right: 40px;
+  }
+}
+
+@media (max-width: 426px) {
+  .img__swap_stand,
+  .svg__form_content {
+      display: none;
+  }
+  .wrapper_stands {
+    justify-content: center;
+  }
+  #nameStand {
+    font-size: 28px;
+  }
+  .about__stand_t {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  .text__open_st {
+    margin-left: 20px;
+    margin-bottom: 100px;
+  }
+  .open__card_btn-st {
+    margin-top: 30px;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .open__card_btn-st > a {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container__prew {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+  }
 }
