--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -460,7 +460,7 @@
   max-width: 800px;
   width: 100%;
   text-align: center;
-  margin-top: -140px;
+  margin-top: -60px;
 }
 
 .slider input[type=radio] {
@@ -517,6 +517,9 @@
   .open__card_btn-st > a {
     margin-left: 0;
     margin-top: 10px;
+  }
+  .slider {
+    margin-top: -140px;
   }
 }
 
